# pycavalry

./: .gitignore  .gitmodules  Cargo.toml  README.md  test.jinja  test.py
crates/pycavalry_cli/: Cargo.toml
crates/pycavalry_cli/src/: main.rs
crates/pycavalry_diagnostics/: Cargo.toml
crates/pycavalry_diagnostics/src/: dyn_compare.rs  lib.rs  macros.rs  reporter.rs
crates/pycavalry_jinja/: Cargo.toml
crates/pycavalry_jinja/src/: jinja_ast.rs  jinja_lexer.rs  jinja_parser.rs  jinja_scope.rs  lib.rs
crates/pycavalry_lib/: Cargo.toml
crates/pycavalry_lib/src/: custom_diagnostics.rs  lib.rs  scope.rs  state.rs
crates/pycavalry_lib/src/diagnostics/: dyn_compare.rs  macros.rs  mod.rs
crates/pycavalry_lib/src/synth/: annotation.rs  expression.rs  statement.rs
crates/pycavalry_lib/src/types/: helpers.rs  mod.rs
src/: custom_diagnostics.rs  diagnostic.rs  helpers.rs  lib.rs  main.rs  scope.rs  state.rs  synth.rs
src/diagnostics/: base.rs  custom.rs  macros.rs  mod.rs
src/synth/: annotation.rs  expression.rs  mod.rs  statement.rs  synth.rs
src/types/: base.rs  helpers.rs  mod.rs  types.rs
tests/: lambdas.rs  simple.rs
tests/common/: mod.rs
