[workspace]
resolver = "2"
members = [
    "crates/pycavalry_lib",
    "crates/pycavalry_cli",
    "crates/pycavalry_jinja",
    "ruff/crates/*", "crates/pycavalry_diagnostics",
]
exclude = ["ruff"]
default-members = ["crates/pycavalry_cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
