[package]
name = "pycavalry_diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ariadne = { version = "0.4.1", features = ["auto-color"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
ruff_text_size = { path = "../../ruff/crates/ruff_text_size" }
ruff_python_parser = { path = "../../ruff/crates/ruff_python_parser" }
