[package]
name = "pycavalry_lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ariadne = { version = "0.4.1", features = ["auto-color"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
im = "15.1.0"
ruff_text_size = { path = "../../ruff/crates/ruff_text_size" }
ruff_python_ast = { path = "../../ruff/crates/ruff_python_ast" }
ruff_python_parser = { path = "../../ruff/crates/ruff_python_parser" }
ruff_python_trivia = { path = "../../ruff/crates/ruff_python_trivia" }
replace_with = "0.1.7"
gc = { git = "https://github.com/Manishearth/rust-gc.git", rev = "f7232e2", features = ["derive"] }

[dev-dependencies] 
indoc = "2"

